# molpro-dirman

./: README.md
molpro-dirman/: pyproject.toml
molpro-dirman/molpro-dirman/: __init__.py  __main__.py  config.py  sys_read.py  sys_write.py  system.py
molpro-dirman/molpro_dirman/: __init__.py  __main__.py  config.py  errors.py  local_read.py  local_write.py  sys_read.py  sys_write.py
molpro-dirman/src/molpro_dirman/: __init__.py  __main__.py  config.py  errors.py  local_read.py  local_write.py
molpro-dirman/tests/: __init__.py  fixtures.py  test_config.py  test_local_read.py  test_local_write.py  test_sys_read.py  test_sys_write.py
