[tool.poetry]
name = "molpro_dirman"
version = "0.1.2"
description = "CLI tool for managing local project directories"
authors = ["MolarFox <molar@molarfox.io>"]
license = "gpl-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
